; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_get_source_output_flags.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_get_source_output_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @obs_get_source_output_flags(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.obs_source_info*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call %struct.obs_source_info* @get_source_info(i8* %4)
  store %struct.obs_source_info* %5, %struct.obs_source_info** %3, align 8
  %6 = load %struct.obs_source_info*, %struct.obs_source_info** %3, align 8
  %7 = icmp ne %struct.obs_source_info* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.obs_source_info*, %struct.obs_source_info** %3, align 8
  %10 = getelementptr inbounds %struct.obs_source_info, %struct.obs_source_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  br label %13

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12, %8
  %14 = phi i32 [ %11, %8 ], [ 0, %12 ]
  ret i32 %14
}

declare dso_local %struct.obs_source_info* @get_source_info(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
